--- a/about.qmd
+++ b/about.qmd
@@ -1,15 +1,34 @@
 ---
-title: "About"
+title: "About Me"
 ---
 
-About this site
+I am an undergraduate at the **University of California, Los Angeles (UCLA)**, double majoring in **Statistics & Data Science** and **Economics**. I love working at the intersection of analytics, technology, and business — especially where data-driven insights can enhance decision-making and real-world outcomes.
 
-```{r}
-1 + 1
-```
+My academic work blends statistical modeling, machine learning, and applied econometrics with a strong interest in how data products are built, deployed, and used. Whether it’s developing predictive models, building dashboards, or designing generative-AI tools, I enjoy turning complex data problems into clear, actionable solutions.
 
+## Core Interests
 
-```{r}
-runif(10)
-```
+- Predictive modeling and machine learning  
+- Experimental design and causal inference  
+- Business intelligence, data visualization, and reporting  
+- AI applications in finance, customer analytics, and operational automation  
+- Using statistical thinking to solve interdisciplinary problems  
 
+## Beyond Academics
+
+Outside the classroom, I am deeply involved in the UCLA community:
+
+- **Resident Assistant (RA)** — supporting residents, designing programming, and building inclusive communities  
+- **Latin American Student Organization (LASO)** — leadership roles focused on mentorship, cultural engagement, and event planning  
+- **Engineers Without Borders (EWB)** — supporting internal operations and member coordination  
+- Active involvement in other campus and professional organizations  
+
+These experiences have strengthened my communication, project management, and leadership skills, and they inspire me to bring empathy and structure into every team I work with.
+
+## Looking Ahead
+
+I’m excited about opportunities that let me combine analytics, creativity, and technology — especially roles where I can contribute to data-driven products, scalable systems, or AI-enabled tools with real impact.
+
+[Learn about my experience →](cv.qmd)
+
+[Take a look at some of my projects →](projects.qmd)
